--- a/src/components/css/admin.css
+++ b/src/components/css/admin.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+a {
+  color: #4650dd;
+  text-decoration: none;
+}
 
 #btn {
   margin-top: 15px;
@@ -152,8 +156,272 @@
  background: #636ac9;
 }
 
+.page-holder {
+  display: flex;
+  overflow-x: hidden;
+  width: 100%;
+  min-height: calc(100vh - 72px);
+  padding-top: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.bg-gray-100 {
+  background-color: #f8f9fa !important;
+}
+
+.bg-404{
+  background-image: url(../img/error-404.jpg);
+  overflow: visible;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 80vh;
+}
+
+
+.card-widget,
+.card-widget-body {
+  display: flex;
+  align-items: center;
+}
+
+.card-widget {
+  padding: 1.5rem;
+  border-radius: 50rem;
+  background: #fff;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  justify-content: space-between;
+}
+
+.card-widget-body {
+  flex-grow: 1;
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.bg-indigo {
+  background-color: #6610f2 !important;
+}
+
+.text-gray-500 {
+  color: #adb5bd !important;
+}
+
+.icon {
+  display: flex;
+  width: 3.2rem;
+  height: 3.2rem;
+  flex-shrink: 0;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.bg-indigo {
+  background-color: #6610f2 !important;
+}
+
+.bg-green {
+  background-color: #35b653 !important;
+}
+
+.bg-blue {
+  background-color: #0d6efd !important;
+}
+
+.bg-red {
+  background-color: #dc3545 !important;
+}
+
+.section-heading {
+  font-weight: 700;
+}
+
+.section-heading.section-heading-ms {
+  margin-left: 1rem;
+}
+
+.card {
+  border: none;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid transparent;
+  border-radius: 1rem;
+}
+
+.card-table {
+  overflow: hidden;
+}
+
+.card-table-img {
+  display: inline-block;
+  width: 100%;
+  height: auto;
+}
+.card-header {
+  position: relative;
+  padding: 2rem;
+  border-bottom: none;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  z-index: 2;
+}
+
+.card-header:first-child {
+  border-radius: 1rem;
+}
+
+.card-heading {
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
+.card-body {
+  flex: 1 1 auto;
+  padding: 1.5rem;
+}
+.card-footer, .card-header {
+  padding: 1rem 2rem;
+  background-color: rgba(0,0,0,.03);
+}
+.card-footer {
+  border-top: 1px solid transparent;
+}
+.card-footer:last-child {
+  border-radius: 1rem;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #4650dd;
+  border-color: #4650dd;
+}
+
+.text-indigo {
+  color: #6610f2 !important;
+}
+
+.text-green {
+  color: #35b653 !important;
+}
+
+.text-red {
+  color: #dc3545 !important;
+}
+
+.text-reset {
+  --bs-text-opacity: 1;
+  color: inherit !important;
+}
+.bg-hover-gradient-primary {
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.bg-hover-gradient-primary:before,
+.bg-hover-primary {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.bg-hover-gradient-primary::before {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  opacity: 0;
+  background: -webkit-gradient(
+    linear,
+    right top,
+    left top,
+    from(#4650dd),
+    to(#1d26a0)
+  ) !important;
+  background: -webkit-linear-gradient(right, rgb(70, 80, 221), rgb(29, 38, 160)) !important;
+  background: linear-gradient(270deg, rgb(70, 80, 221), rgb(29, 38, 160)) !important;
+  z-index: -1;
+}
+
+.bg-hover-gradient-primary:hover,
+.bg-hover-gradient-primary:hover [class*="text-"]:not(.exclude) {
+  color: #fff !important;
+  background: -webkit-gradient(
+    linear,
+    right top,
+    left top,
+    from(#4650dd),
+    to(#1d26a0)
+  ) !important;
+  background: -webkit-linear-gradient(right, #4650dd, #1d26a0) !important;
+  background: linear-gradient(270deg, #4650dd, #1d26a0) !important;
+}
+
+.avatar {
+  display: inline-block;
+  position: relative;
+  width: 3rem;
+  height: 3rem;
+  text-align: center;
+  border: #dee2e6;
+  border-radius: 50%;
+  background: #fff;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  line-height: 3rem;
+}
+
+.text-sm {
+  font-size: 0.7875rem !important;
+}
+
+.bg-gray-200 {
+  background-color: #e9ecef !important;
+}
+
+#productCard { 
+ height:0%;
+ display: none;
+ transition: all 0.2s ease-in-out;
+}
+
+#productCard.show { 
+ height:100%;
+ display: block;
+}
+
 
 /*------ Configuración  de las medias queries ----------*/
+@media (min-width: 992px) {
+  .card-table-img {
+    width: 100%;
+    height:auto;
+}
+}
 
 /*------ Media Queries para dispositivos extra small ---*/
 /* @media all and (min-width: 319px) and (max-width: 575px) {
