--- a/src/components/css/admin.css
+++ b/src/components/css/admin.css
@@ -165,6 +165,16 @@ a {
   flex-wrap: wrap;
 }
 
+.page-header {
+  margin-bottom: 3rem;
+}
+
+.page-heading {
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  font-weight: 300;
+}
+
 .bg-gray-100 {
   background-color: #f8f9fa !important;
 }
