--- a/src/components/css/admin.css
+++ b/src/components/css/admin.css
@@ -36,8 +36,8 @@ a {
 }
 
 .sidebar.show {
-  width: 8rem;
-  height: 100vh;
+  width: 9rem;
+ /*  height: 100vh; */
   text-align: center;
 }
 
@@ -322,10 +322,27 @@ a {
   border-radius: 1rem;
 }
 
+.form-check {
+  display: block;
+  min-height: 1.35rem;
+  padding-left: 1.5em;
+  margin-bottom: .125rem;
+}
+
+.form-check-input:checked {
+  background-color: #4650dd;
+  border-color: #4650dd;
+}
 .btn-primary {
   color: #fff;
   background-color: #4650dd;
   border-color: #4650dd;
+}
+
+.btn-link {
+  font-weight: 400;
+  color: #4650dd;
+  text-decoration: none;
 }
 
 .text-indigo {
