--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,37 @@
-.App {
-  text-align: center;
+@import url(https://fonts.googleapis.com/css2?family=Merriweather:wght@100;200;300;400;500;600;800;900&display=swap);
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body, header {
+  font-family: "Merriweather", serif;
+}
+
+
+.nav-link:hover {
+  background: #e9ecef;
+}
+
+.dropdown-menu {
+  border: 0 !important;
+}
+
+.dropdown-item {
+  font: 0.8em sans-serif;
+}
+
+.offcanvas-start {
+
+  width: 132px!important;
+}
+
+.nav-link{
+  font-size: 0.8em;
+}
+
+.navbar-text{
+  font-size: 0.75em!important;
 }
