--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-body, header, footer {
+body, header, footer, #root {
   font-family: "Merriweather", serif;
 }
 
@@ -34,5 +34,67 @@ body, header, footer {
 
 .navbar-text{
   font-size: 0.65em!important;
+}
+
+.shadow-footer{
+  box-shadow: 1px -6px 13px -5px rgba(0,0,0,0.75);
+-webkit-box-shadow: 1px -6px 13px -5px rgba(0,0,0,0.75);
+-moz-box-shadow: 1px -6px 13px -5px rgba(0,0,0,0.75);
+}
+
+
+
+.card {
+  border: none;
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid transparent;
+  border-radius: 1rem;
+}
+
+.card-header {
+  position: relative;
+  padding: 2rem;
+  border-bottom: none;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  z-index: 2;
+}
+
+.card-header:first-child {
+  border-radius: 1rem;
+}
+
+.card-heading {
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
+.card-body {
+  flex: 1 1 auto;
+  padding: 1.5rem;
+}
+.card-footer, .card-header {
+  padding: 1rem 2rem;
+  background-color: rgba(0,0,0,.03);
+}
+.card-footer {
+  border-top: 1px solid transparent;
+}
+.card-footer:last-child {
+  border-radius: 1rem;
 }
 
