--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 
 body,
+main,
 header,
 footer,
 #root {
@@ -141,6 +142,11 @@ footer,
   display: inline-block !important;
 }
 
+.avatar-xxl {
+  height: 5.125rem;
+  width: 5.125rem;
+}
+
 .avatar-sm {
   height: 2.5rem;
   width: 2.5rem;
@@ -153,3 +159,61 @@ footer,
   object-fit: cover;
 }
 
+.bg-dark-overlay-4 {
+  position: relative;
+  z-index: 99;
+}
+
+.bg-dark-overlay-4:before {
+  content: " ";
+  background: #000;
+  opacity: 0.4;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.breadcrumb-item {
+  font-size: 0.8125rem;
+}
+
+.breadcrumb.breadcrumb-dark .breadcrumb-item a {
+  color: #dfe0e5;
+  text-decoration: none;
+}
+
+.breadcrumb.breadcrumb-dark .breadcrumb-item.active {
+  color: rgb(253, 89, 89);;
+}
+
+.breadcrumb.breadcrumb-dark .breadcrumb-item a:hover {
+  color: #2163e8;
+}
+
+.breadcrumb.breadcrumb-dots .breadcrumb-item + .breadcrumb-item::before {
+  content: "•";
+  font-size: 22px;
+  line-height: 0;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color:rgb(253, 89, 89);
+}
+
+/*media queries*/
+
+@media (min-width: 768px) {
+.avatar-xxl {
+  width: 8rem;
+  height: 8rem;
+}
+}
