--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,18 @@ footer,
   color:rgb(253, 89, 89);
 }
 
+.grayscale {
+  filter: grayscale(100%);
+  transition: all 0.6s ease;
+}
+
+.grayscale:hover {
+  filter: none;
+}
+.h-300 {
+  height: 300px !important;
+}
+
 /*media queries*/
 
 @media (min-width: 768px) {
