--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ footer,
   width: 132px !important;
 }
 
-
 .navbar-text {
   font-size: 0.66em !important;
 }
@@ -79,7 +78,11 @@ footer,
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: linear-gradient(180deg, transparent, rgba(15, 15, 15, 0.726));
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(15, 15, 15, 0.726)
+  );
   z-index: 1;
 }
 
@@ -93,11 +96,11 @@ footer,
   width: 100%;
   height: 100%;
   background: inherit;
-  transition: 0.5s ease-in-out!important;
+  transition: 0.5s ease-in-out !important;
   z-index: -2;
 }
 
-.card-bg-scale{
+.card-bg-scale {
   z-index: 99;
 }
 
@@ -109,6 +112,46 @@ footer,
 .card,
 .overflow-hidden {
   will-change: transform;
+}
+
+.card-fold {
+  position: relative;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+
+.card-fold:after {
+  position: absolute;
+  content: "";
+  height: 0;
+  width: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1000;
+  background: linear-gradient(
+    -45deg,
+    #fff 45%,
+    #fff 45%,
+    #d0d4d9 50%,
+    #fff 70%
+  );
+  -webkit-box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.4);
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  border-radius: 0.7rem 0px 0px 0px;
+}
+
+.card:hover .card-fold:after,
+.card:focus .card-fold:after,
+.card:active .card-fold:after,
+.card:hover.card-fold:after,
+.card:focus.card-fold:after,
+.card:active.card-fold:after {
+  width: 40px;
+  height: 40px;
 }
 
 .h-500 {
@@ -178,6 +221,10 @@ footer,
   z-index: -1;
 }
 
+.bg-primary-soft {
+  background-color: #d2d6ffec !important;
+}
+
 .breadcrumb-item {
   font-size: 0.8125rem;
 }
@@ -188,7 +235,7 @@ footer,
 }
 
 .breadcrumb.breadcrumb-dark .breadcrumb-item.active {
-  color: rgb(253, 89, 89);;
+  color: rgb(253, 89, 89);
 }
 
 .breadcrumb.breadcrumb-dark .breadcrumb-item a:hover {
@@ -206,7 +253,7 @@ footer,
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  color:rgb(253, 89, 89);
+  color: rgb(253, 89, 89);
 }
 
 .grayscale {
@@ -224,8 +271,8 @@ footer,
 /*media queries*/
 
 @media (min-width: 768px) {
-.avatar-xxl {
-  width: 8rem;
-  height: 8rem;
-}
+  .avatar-xxl {
+    width: 8rem;
+    height: 8rem;
+  }
 }
