--- a/src/components/css/admin.css
+++ b/src/components/css/admin.css
@@ -10,7 +10,7 @@ a {
   color: #4650dd;
   text-decoration: none;
 }
-
+/*--  boton hamburguesa ---*/
 #btn {
   margin-top: 15px;
   margin-left: 5px;
@@ -23,7 +23,9 @@ a {
   box-shadow: none !important;
   transition: all 0.5s ease;
 }
+/*--- fin boton hamburguesa-- */
 
+/* -----estilo del sidebar--- */
 .sidebar {
   overflow: hidden;
   width: 4.5rem;
@@ -155,6 +157,7 @@ a {
 .sidebar li .sidebar-link.active {
  background: #636ac9;
 }
+/* ----- fin estilo del sidebar--- */
 
 .page-holder {
   display: flex;
@@ -191,7 +194,7 @@ a {
   height: 80vh;
 }
 
-
+/* -----estilo de las cards--- */
 .card-widget,
 .card-widget-body {
   display: flex;
@@ -209,84 +212,6 @@ a {
 
 .card-widget-body {
   flex-grow: 1;
-}
-
-.dot {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  flex-grow: 0;
-  flex-shrink: 0;
-}
-
-.bg-primary-light {
-  background-color: #dadcf8!important;
-}
-
-.bg-green-light {
-  background-color: #d7f0dd!important;
-}
-
-.bg-danger-light {
-  background-color: #f8d7da!important;
-}
-
-.bg-indigo {
-  background-color: #6610f2 !important;
-}
-
-.text-gray-500 {
-  color: #adb5bd !important;
-}
-
-.text-green {
-  color: #35b653!important;
-}
-
-.text-blue {
-  color: #0d6efd!important;
-}
-
-.text-primary, .text-primary-hover:hover {
-  color: #4650dd!important;
-}
-
-.icon {
-  display: flex;
-  width: 3.2rem;
-  height: 3.2rem;
-  flex-shrink: 0;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-}
-
-.bg-indigo {
-  background-color: #6610f2 !important;
-}
-
-.bg-green {
-  background-color: #35b653 !important;
-}
-
-.bg-blue {
-  background-color: #0d6efd !important;
-}
-
-.bg-red {
-  background-color: #dc3545 !important;
-}
-
-.bg-blue-light {
-  background-color: #cfe2ff!important;
-}
-
-.section-heading {
-  font-weight: 700;
-}
-
-.section-heading.section-heading-ms {
-  margin-left: 1rem;
 }
 
 .card {
@@ -352,6 +277,76 @@ a {
   border-radius: 1rem;
 }
 
+/* -----fin estilo de las cards--- */
+
+.dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.bg-primary-light {
+  background-color: #dadcf8!important;
+}
+
+.bg-green-light {
+  background-color: #d7f0dd!important;
+}
+
+.bg-danger-light {
+  background-color: #f8d7da!important;
+}
+
+.bg-indigo {
+  background-color: #6610f2 !important;
+}
+
+.text-gray-500 {
+  color: #adb5bd !important;
+}
+
+.text-green {
+  color: #35b653!important;
+}
+
+.text-blue {
+  color: #0d6efd!important;
+}
+
+.text-primary, .text-primary-hover:hover {
+  color: #4650dd!important;
+}
+
+.bg-indigo {
+  background-color: #6610f2 !important;
+}
+
+.bg-green {
+  background-color: #35b653 !important;
+}
+
+.bg-blue {
+  background-color: #0d6efd !important;
+}
+
+.bg-red {
+  background-color: #dc3545 !important;
+}
+
+.bg-blue-light {
+  background-color: #cfe2ff!important;
+}
+
+.section-heading {
+  font-weight: 700;
+}
+
+.section-heading.section-heading-ms {
+  margin-left: 1rem;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #4650dd;
@@ -380,26 +375,6 @@ a {
   --bs-text-opacity: 1;
   color: inherit !important;
 }
-
-.text-sm {
-  font-size: 0.7875rem !important;
-}
-
-.bg-gray-200 {
-  background-color: #e9ecef !important;
-}
-
-#productCard { 
- height:0%;
- display: none;
- transition: all 0.2s ease-in-out;
-}
-
-#productCard.show { 
- height:100%;
- display: block;
-}
-
 
 /*------ Configuración  de las medias queries ----------*/
 @media (min-width: 992px) {
